--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 /*************************/
 /*      It's my stm32    */
-/*         routine       */    
+/*         routine       */
+/*         ck yang       */    
 /*************************/
